# waitlist

./: .env.example  .gitignore  Cargo.toml  README.md  package.json  schema.sql
.sqlx/: query-4ead50bc157f323cdd1cba37cfef070619d21b310913d65703efa9eeffd3a528.json  query-58b9a70942f9fc8623ad774c1dae7591a106f03017c518086d6a53d6d622d699.json  query-5e8b3fcc5d452c78309e542e06ff7fe911d8e09a9af125f81c4839ab53ba5bcf.json
backend/: Cargo.toml  cleanup.js  create-admin.js  migrate.js  package-lock.json  package.json  schema.sql  server.js
backend/.sqlx/: query-35a88435d2d8aac92b177431cdd5d2a11dd0a7035c2f533f89482eec8a25098f.json  query-5899e5b7da0d6bab63074f076f9e2481323dca752cbab0c2d2604281719ed715.json  query-72b2a7a3dd7a070da3e4c2eeb237532be7728ba9f2f720cae9f2990ea9cdb9aa.json  query-94a2246d82ec39f1aaf4ae8f985067b6dcc8d38be7f33e06c109edda61903be6.json  query-f1c4a8394d5403645bbeffa988d2dc43ed32022142f971c27e5c6c34cf2072c8.json
backend/src/: main.rs  schema.sql
frontend/: README.md  app.json  index.html  package-lock.json  package.json  vite.config.js
frontend/.expo/types/: router.d.ts
frontend/app/: _layout.tsx  index.tsx  onboarding.tsx
frontend/app/(tabs)/: _layout.tsx  explore.tsx  index.tsx  profile.tsx  reservations.tsx
frontend/components/: StartupAnimation.tsx
frontend/src/: App.jsx  App.tsx  index.css
frontend/src/components/: AdminDashboard.css  AdminDashboard.jsx  Layout.jsx  LegalTerms.jsx  Login.jsx  ProtectedRoute.jsx  QRCode.jsx  Waitlist.css  Waitlist.jsx
src/: main.rs  schema.sql  server.js
src/config/: database.js
(+9 files in other folders)
